# agent-hub

./: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
.wolf/: anatomy.md  buglog.json  cerebrum.md  identity.md  memory.md  token-ledger.json
.wolf/hooks/: _session.json
docs/: PUBLISHING.md  STYLE.md
packaging/homebrew/Casks/: agent-hub.rb
packaging/homebrew/Formula/: agent-hub-cli.rb
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cli/: handlers.rs  mod.rs
src-tauri/src/commands/: agents.rs  keepalive.rs  mod.rs  network.rs  proxy.rs  system.rs
src-tauri/src/core_modules/: keepalive.rs  network.rs  proxy.rs  system.rs
src-tauri/src/core_modules/agents/: claude.rs  codex.rs  cursor.rs  cursor_cookies.rs  cursor_usage.rs  mod.rs  opencode.rs
src-tauri/src/models/: types.rs
src-tauri/src/tui/: mod.rs
src/lib/components/: AgentCard.svelte  AgentTab.svelte  KeepAlive.svelte  NetworkInfo.svelte  ProxyInfo.svelte  SessionList.svelte  SystemStatus.svelte  UsageChart.svelte
src/lib/styles/: panels.css
src/routes/: +page.svelte
