[package]
name = "agent-hub"
version = "0.1.0"
description = "Manage AI coding agents on your machine"
authors = ["xiaoleiy"]
edition = "2021"

[lib]
name = "agent_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
whoami = "1"
colored = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dirs-next = "2"
ratatui = "0.29"
crossterm = "0.28"
# Chrome/Chromium cookie decryption (macOS: AES-128-CBC with a Keychain-derived key)
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
sha1 = "0.10"
base64 = "0.22"
